# rigplane-core

./: .gitignore  .importlinter  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CNAME  README.md  RELEASE_NOTES.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/commands/: analyze-failure.md  audit-ui.md  decompose-issue.md  generate-tests.md  refactor.md  regression-check.md  release.md
.github/: pull_request_template.md
.github/scripts/: check-rebrand-allowlist.sh
.github/workflows/: agent-review-gate.yml  consumer-contracts-gate.yml  dispatch-downstream.yml  docs.yml  full.yml  publish.yml  quick.yml  rebrand-gate.yml  state-types-gate.yml  test.yml
contracts/consumer-expectations/: README.md
docs/: AUDIO_STREAMING_PROFILE.md  CHANGELOG.md  CNAME  PERFORMANCE.md  PROJECT.md  SECURITY.md  capabilities-matrix.md  index.md  migrate.md  opuslib-macos-fix.md  radio-protocol.md
docs/api/: audio.md  auth.md  backends-icom7610-drivers.md  backends-icom7610.md  backends.md  command-catalog.md  commander.md  commands.md  exceptions.md  public-api-surface.md  radio.md  radios.md  rig-loader.md  rigctld.md  scope.md  sync.md  transport.md  types.md  web.md
docs/architecture/: 2026-06-22-audio-session-reconciler-PLAN.md  2026-06-22-audio-session-state-architecture.md  2026-06-22-radio-session-lifecycle-PLAN.md  2026-06-22-radio-session-lifecycle.md  field-path-promotion-criterion.md  level-meter-calibrated-domain.md  open-core-policy.md
docs/contracts/: diagnostic-bundle-v1.md  diagnostic-bundle-v2.md  validation-matrix-v1.md
docs/guide/: audio-recipes.md  cli.md  commands.md  configuration.md  connection.md  diagnostic-reports.md  hamlib-rigctld-provider.md  ic705-usb-setup.md  ic7300-usb-setup.md  ic7610-usb-setup.md  ic9700-usb-setup.md  installation.md  profiles.md  quickstart.md  radios.md  rig-profiles.md  troubleshooting.md  web-ui.md  wsjtx-setup.md
docs/i18n/: core-string-inventory.md  locale-contract.md  translating.md
docs/internals/: architecture.md  audio-capture-health.md  backend-neutral-readiness-gap-register.md  cli-design.md  contributing.md  github-project-workflow.md  hamlib-provider-rollout.md  ic7610-control-readback-audit.md  legacy-state-writer-inventory.md  protocol.md  radio-acquisition-policy.md  radio-acquisition-scheduler.md  radio-state-pipeline-contracts.md  radio-state-pipeline-regression-matrix.md  radio-state-pipeline-validation.md  radio-state-store.md  raw-civ-transactions.md  reliability-semantics.md  rfc-audio-v1-mini.md
docs/operations/: managed-runtime-packaging.md
docs/overrides/: main.html
docs/parity/: ic7610_command_matrix.json
docs/plans/: 2026-04-29-modularization-discovery.md  2026-04-29-modularization-plan.md  2026-05-03-diagnostic-data-collection-design.md  2026-05-07-audio-route-resolver-design.md  2026-05-08-audio-capability-probing.md  2026-05-08-audio-codec-policy.md  2026-05-08-audio-profile-policy-audit.md  2026-05-08-usb-audio-negotiation.md  2026-05-23-hamlib-provider-contract.md  2026-05-28-real-radio-validation-matrix.md  2026-05-28-universal-validation-matrix.md  2026-06-09-target-audio-architecture.md
docs/validation/: running-validation.md  universal-matrix.md
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.i18n.config.ts  vite.config.ts
frontend/scripts/: i18n-preview-server.mjs
frontend/src/: App.svelte
hooks/: sitemap_noindex.py
rigs/: _schema.md  _schema_v2.md  ftx1.toml  ic705.toml  ic7300.toml  ic7610.toml  ic9700.toml  tx500.toml  x6100.toml  x6200.toml
rigs/examples/: sdrplay_rspdx.toml
scripts/: bump_downstream_pin.py  gen_state_types.py  run_consumer_contracts.py  validate-release.sh
src/icom_lan/: __init__.py  _audio_codecs.py  _audio_recovery.py  _audio_transcoder.py  _bounded_queue.py  _bridge_metrics.py  _bridge_state.py  _civ_rx.py  _connection_state.py  _optional_deps.py  _poller_types.py  _queue_pressure.py  _runtime_protocols.py  _shared_state_runtime.py  _state_cache.py  _state_queries.py  audio_bus.py  capabilities.py  command_map.py  command_spec.py  commander.py  env_config.py  exceptions.py  ic705.py  meter_cal.py  profiles_runtime.py  protocol.py  radio.py  radio_state.py  radio_state_snapshot.py  radios.py  rig_loader.py  startup_checks.py  sync.py  transport.py  types.py
src/rigplane/: __init__.py  __main__.py  _audio_runtime_mixin.py  _control_phase.py  _dual_rx_runtime.py  _optional_deps.py  _scope_runtime.py  audio_analyzer.py  audio_bridge.py  audio_fft_scope.py  auth.py  capabilities.py  civ.py  cw_auto_tuner.py  discovery.py  exceptions.py  hamlib_bridge.py  protocol.py  proxy.py  radio.py  radio_initial_state.py  radio_protocol.py  radio_reconnect.py  scope_render.py  types.py  usb_audio_resolve.py
tests/: _audio_pipeline_helpers.py  _audio_stream_fake.py  _diagnostics_mock_server.py  _order_sensitive_radios.py  conftest.py  fake_rigctld.py  mock_server.py  test_acquisition_scheduler.py  test_audio_backend.py  test_audio_bridge.py  test_audio_bridge_stereo.py  test_audio_bus.py  test_audio_bus_heartbeat.py  test_audio_capture_tx_validator_seam.py  test_audio_codec.py  test_audio_codecs.py  test_audio_device_config_mor578.py  test_audio_duplex.py  test_audio_fft_scope.py  test_audio_fullduplex.py  test_audio_pipeline_harness.py  test_audio_pipeline_os_smoke.py  test_audio_probe.py  test_audio_probe_profile.py  test_audio_probe_runner.py  test_audio_reconnect_rearm.py  test_audio_recovery.py  test_audio_recovery_session.py  test_audio_route.py  test_audio_rx_tx_transition.py  test_audio_scope_dispatch.py  test_audio_session.py  test_audio_session_health.py  test_audio_session_invariants.py  test_audio_session_radio_owned.py  test_audio_transcoder.py  test_audio_transcoder_coverage.py  test_audio_transport_lan.py  test_audio_transport_protocol.py  test_audio_transport_serial.py  (+167 more)
tests/contracts/: test_adaptive_egress_conformance.py  test_audio_lifecycle_conformance.py  test_audio_transport_conformance.py  test_consumer_contracts.py  test_lazy_imports.py
tests/fixtures/: civ_rx_frames.json  (+2 more)
(+551 files in other folders)
