[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icom-lan"
version = "0.19.0"
description = "Python library for controlling Icom transceivers over LAN (UDP) — no wfview/hamlib required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "opuslib",
    "sounddevice",
    "numpy",
]
authors = [
    { name = "Sergey Morozik", email = "morozsm@gmail.com" },
]
keywords = ["icom", "ham-radio", "amateur-radio", "transceiver", "ci-v", "ic-7610", "ic-705"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/morozsm/icom-lan"
Documentation = "https://morozsm.github.io/icom-lan/"
Repository = "https://github.com/morozsm/icom-lan"
Issues = "https://github.com/morozsm/icom-lan/issues"

[project.scripts]
icom-lan = "icom_lan.cli:main"

[project.optional-dependencies]
# `audio` and `bridge` extras are kept as no-op aliases for backwards
# compatibility — `opuslib`, `sounddevice`, and `numpy` are now part of
# the core dependencies (#1090). New users should run `pip install icom-lan`.
audio = []
bridge = []
scope = [
    "pillow>=10.0",
]
dsp = ["scipy>=1.11"]
webrtc = ["aiortc>=1.9"]
tls = ["cryptography>=41.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "ruff", "mypy"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "import-linter>=2.0,<3",
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.18.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.0",
    "ruff>=0.15.2",
    "types-pyserial>=3.5",
]

[tool.hatch.build.targets.wheel.force-include]
"rigs" = "icom_lan/rigs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring real radio hardware (skip if not configured)",
    "e2e: end-to-end tests for PCM API and CLI audio workflows",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TID251"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["TID251"]
# CLI is the orchestrator that composes tier-3 web and rigctld servers (issue-blessed).
"src/icom_lan/cli/**" = ["TID251"]
# Package entry point dispatches to cli.main.
"src/icom_lan/__main__.py" = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"icom_lan.radio.IcomRadio".msg = "Use radio_protocol.Radio in web/ modules (and capability protocols) instead of IcomRadio."
"icom_lan.web".msg = "tier 3 — internal; do not import outside web/ subtree (tests are exempt)."
"icom_lan.rigctld".msg = "tier 3 — internal; do not import outside rigctld/ subtree (tests are exempt)."
"icom_lan.cli".msg = "tier 3 — internal; do not import outside cli + tests."

[tool.mypy]
python_version = "3.11"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["icom_lan.web.*"]
strict = true
follow_imports = "skip"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["cryptography", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

# Audio / DSP deps without published type stubs.  ``numpy``, ``sounddevice``
# and ``opuslib`` ship with the core install since #1090; ``scipy`` is still
# behind the ``[dsp]`` extra.  Ignore missing stubs so mypy runs cleanly.
[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "sounddevice",
    "sounddevice.*",
    "opuslib",
    "opuslib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "icom_lan.cli",
    "icom_lan.web.radio_poller",
    "icom_lan.web.handlers.control",
    "icom_lan.rigctld.routing",
    "icom_lan.rigctld.handler",
]
disable_error_code = ["attr-defined"]
