[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rigplane"
version = "2.5.1"
description = "Multi-vendor radio control library and Web UI with native providers and planned Hamlib-backed CAT coverage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "opuslib",
    "sounddevice",
    "numpy",
    "platformdirs>=4.2",
]
authors = [
    { name = "Sergey Morozik", email = "morozsm@gmail.com" },
]
keywords = ["rigplane", "ham-radio", "amateur-radio", "transceiver", "icom", "yaesu", "xiegu", "lab599", "ci-v", "cat", "rigctld", "ic-7610", "ic-7300", "ic-705", "ftx-1"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://rigplane.dev/"
Documentation = "https://rigplane.dev/"
Repository = "https://github.com/rigplane/rigplane-core"
Issues = "https://github.com/rigplane/rigplane-core/issues"

[project.scripts]
rigplane = "rigplane.cli:main"
# Deprecated alias of `rigplane` — prints DeprecationWarning then forwards.
icom-lan = "icom_lan._cli_shim:main"

[project.optional-dependencies]
# `audio` and `bridge` extras are kept as no-op aliases for backwards
# compatibility — `opuslib`, `sounddevice`, and `numpy` are now part of
# the core dependencies (#1090). New users should run `pip install rigplane`.
audio = []
bridge = []
scope = [
    "pillow>=10.0",
]
dsp = ["scipy>=1.11"]
webrtc = ["aiortc>=1.9"]
tls = ["cryptography>=41.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "pytest-xdist", "ruff", "mypy"]

[dependency-groups]
dev = [
    "import-linter>=2.0,<3",
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.18.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.2",
    "types-pyserial>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rigplane", "src/icom_lan"]

[tool.hatch.build.targets.wheel.force-include]
"rigs" = "rigplane/rigs"

[tool.hatch.build.targets.sdist.force-include]
"frontend/dist" = "src/rigplane/web/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring real radio hardware (skip if not configured)",
    "hardware: opt-in tests that may key a real transmitter or require attached devices",
    "e2e: end-to-end tests for PCM API and CLI audio workflows",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "validation_hardware: real-radio validation runs; requires explicit env opt-in",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TID251"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["TID251"]
# CLI is the orchestrator that composes tier-3 web and rigctld servers (issue-blessed).
"src/rigplane/cli/**" = ["TID251"]
# Package entry point dispatches to cli.main.
"src/rigplane/__main__.py" = ["TID251"]
# Backwards-compat shim — re-exports rigplane internals; banned-imports
# checks for tier-3 boundaries don't apply to a deprecated alias package.
"src/icom_lan/**" = ["TID251", "F401", "F403"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"rigplane.radio.IcomRadio".msg = "Use radio_protocol.Radio in web/ modules (and capability protocols) instead of IcomRadio."
"rigplane.web".msg = "tier 3 — internal; do not import outside web/ subtree (tests are exempt)."
"rigplane.rigctld".msg = "tier 3 — internal; do not import outside rigctld/ subtree (tests are exempt)."
"rigplane.cli".msg = "tier 3 — internal; do not import outside cli + tests."

[tool.mypy]
python_version = "3.11"
follow_imports = "skip"

# Backwards-compat shim — pure re-export façade, no semantic content to type-check.
[[tool.mypy.overrides]]
module = ["icom_lan", "icom_lan.*"]
follow_imports = "skip"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["rigplane.web.*"]
strict = true
follow_imports = "skip"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["cryptography", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

# ``Pillow`` is an optional dep behind ``[scope]``; suppress the missing-stubs
# error so ``mypy src/`` is clean regardless of whether Pillow is installed.
[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true

# Audio / DSP deps without published type stubs.  ``numpy``, ``sounddevice``
# and ``opuslib`` ship with the core install since #1090; ``scipy`` is still
# behind the ``[dsp]`` extra.  Ignore missing stubs so mypy runs cleanly.
[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "sounddevice",
    "sounddevice.*",
    "opuslib",
    "opuslib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rigplane.cli",
    "rigplane.web.radio_poller",
    "rigplane.web.handlers.control",
    "rigplane.rigctld.routing",
    "rigplane.rigctld.handler",
]
disable_error_code = ["attr-defined"]
